[tool.poetry]
name = "rss3-dsl-client"
version = "0.3.0"
description = "A Python SDK for RSS3 Data Sub Layer (DSL)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
